[gd_scene load_steps=29 format=3 uid="uid://bvgmhpcxt7eks"]

[ext_resource type="Script" path="res://Scripts/Enemies/Slime.gd" id="1_dexgf"]
[ext_resource type="Texture2D" uid="uid://lvl13pjxkynv" path="res://Assets/Enemies/Slime-SpriteSheet.png" id="2_7ir1x"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_iasfa"]

[sub_resource type="AtlasTexture" id="AtlasTexture_my6ed"]
atlas = ExtResource("2_7ir1x")
region = Rect2(352, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bb5g5"]
atlas = ExtResource("2_7ir1x")
region = Rect2(384, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4ubmj"]
atlas = ExtResource("2_7ir1x")
region = Rect2(416, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5600y"]
atlas = ExtResource("2_7ir1x")
region = Rect2(448, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cuygp"]
atlas = ExtResource("2_7ir1x")
region = Rect2(480, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_h0shm"]
atlas = ExtResource("2_7ir1x")
region = Rect2(512, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_o3oe0"]
atlas = ExtResource("2_7ir1x")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5ramo"]
atlas = ExtResource("2_7ir1x")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mmdwu"]
atlas = ExtResource("2_7ir1x")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xyti1"]
atlas = ExtResource("2_7ir1x")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vdwvv"]
atlas = ExtResource("2_7ir1x")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_uvc8p"]
atlas = ExtResource("2_7ir1x")
region = Rect2(288, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cc6vd"]
atlas = ExtResource("2_7ir1x")
region = Rect2(320, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0cm2v"]
atlas = ExtResource("2_7ir1x")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rlcks"]
atlas = ExtResource("2_7ir1x")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6hxct"]
atlas = ExtResource("2_7ir1x")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vts3k"]
atlas = ExtResource("2_7ir1x")
region = Rect2(96, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_1o2go"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_my6ed")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bb5g5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ubmj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5600y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cuygp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h0shm")
}],
"loop": true,
"name": &"Attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_o3oe0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5ramo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mmdwu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xyti1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vdwvv")
}],
"loop": true,
"name": &"Death",
"speed": 5.0
}, {
"frames": [{
"duration": 3.0,
"texture": SubResource("AtlasTexture_uvc8p")
}, {
"duration": 5.0,
"texture": SubResource("AtlasTexture_cc6vd")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0cm2v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rlcks")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6hxct")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vts3k")
}],
"loop": true,
"name": &"Move",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_0qckq"]
radius = 216.264

[sub_resource type="Animation" id="Animation_f8n7w"]
resource_name = "Attack"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Attack"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}

[sub_resource type="Animation" id="Animation_gb6pu"]
resource_name = "Death"
length = 1.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Death"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.7, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}

[sub_resource type="Animation" id="Animation_rosx7"]
resource_name = "Idle"
length = 3.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Idle"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 2.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="Animation" id="Animation_iyiwa"]
resource_name = "Move"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Move"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_3sduy"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_kslbq"]
_data = {
"Attack": SubResource("Animation_f8n7w"),
"Death": SubResource("Animation_gb6pu"),
"Idle": SubResource("Animation_rosx7"),
"Move": SubResource("Animation_iyiwa"),
"RESET": SubResource("Animation_3sduy")
}

[node name="SlimeEnemy" type="CharacterBody2D"]
z_index = 2
scale = Vector2(0.8, 0.8)
script = ExtResource("1_dexgf")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
z_index = 1
position = Vector2(2.5, -5)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_iasfa")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(3, -6)
sprite_frames = SubResource("SpriteFrames_1o2go")
animation = &"Death"
frame = 1

[node name="PlayerDetection" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetection"]
position = Vector2(2.5, -5)
shape = SubResource("CircleShape2D_0qckq")

[node name="AttackTimer" type="Timer" parent="."]

[node name="SlimeAnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_kslbq")
}

[connection signal="body_entered" from="PlayerDetection" to="." method="_on_player_detection_body_entered"]
[connection signal="body_exited" from="PlayerDetection" to="." method="_on_player_detection_body_exited"]
